# FocusForge

./: .gitignore  Projet.md  README.md  about.html  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Brand/: FocusForgeLogo.tsx
src/components/Layout/: AppShell.tsx
src/components/Timer/: MiniTimerWindow.tsx  SettingsPanel.tsx  TimerPanel.tsx
src/hooks/: useSessions.ts  useSettings.ts  useTimer.ts
src/pages/: Dashboard.tsx  History.tsx
src/services/: miniTimerWindow.ts  notifications.ts  sessions.ts  settings.ts  statistics.ts
src/types/: index.ts
