[package]
name = "focusforge"
version = "0.1.0"
description = "A calm desktop app for deep work sessions."
authors = ["FocusForge"]
edition = "2021"

[lib]
name = "focusforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
